added tests, readme with instructions
